[gd_scene load_steps=6 format=3 uid="uid://dsds4ja55fu4e"]

[ext_resource type="PackedScene" uid="uid://2jcpfncolph" path="res://Scenes/Common/Labels/settings_managed_label.tscn" id="1_25e37"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_vrjft"]
[ext_resource type="PackedScene" uid="uid://btj8iwsaoid87" path="res://Scenes/Common/Buttons/settings_managed_texture_button.tscn" id="2_0p24n"]
[ext_resource type="Script" path="res://Scenes/AppBar/Scripts/title_bar.gd" id="2_61r6w"]
[ext_resource type="Texture2D" uid="uid://bqubwal71vuw3" path="res://Icons/BurningBook.svg" id="3_g17ps"]

[node name="TitleBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_vrjft")
script = ExtResource("2_61r6w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_vrjft")

[node name="NameLabel" parent="MarginContainer" instance=ExtResource("1_25e37")]
layout_mode = 2
size_flags_horizontal = 1
text = "RPG Dice Roller"
horizontal_alignment = 0

[node name="ClearHistoryButton" parent="MarginContainer" instance=ExtResource("2_0p24n")]
layout_mode = 2
size_flags_horizontal = 8
flat = true
texture_2d = ExtResource("3_g17ps")

[node name="ClearHistoryPopup" type="PopupMenu" parent="."]
size = Vector2i(212, 50)
theme = ExtResource("1_vrjft")
item_count = 1
item_0/text = "Clear History"
item_0/id = 0

[connection signal="short_pressed" from="MarginContainer/ClearHistoryButton" to="." method="_on_clear_history_button_short_pressed"]
[connection signal="id_pressed" from="ClearHistoryPopup" to="." method="_on_clear_history_popup_id_pressed"]
